<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_tv_name"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Enter Your Name"
        android:inputType="text"/>
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/et_name"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_tv_email"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Enter Your Email"
        android:inputType="text"/>
    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/et_email"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_tv_phone_number"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone_number"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Enter Your Phone No"
        android:inputType="text"/>
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/et_phone_number"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_tv_address"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_address"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Enter Your Address"
        android:inputType="text"/>
    <TextView
        android:id="@+id/rgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/et_address"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_rg_name"
        android:textSize="14sp"
        />
    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_below="@+id/rgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <RadioButton
        android:id="@+id/rdOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_rb_male"/>
    <RadioButton
        android:id="@+id/rdTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_rb_female"/>
    </RadioGroup>

    <TextView
        android:id="@+id/ch_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/rdGroup"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/lbl_cb_name"
        android:textSize="14sp"
        />
    <CheckBox
        android:id="@+id/cb_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ch_Name"
        android:checked="true"
        android:text="@string/lbl_cb_reading"/>
    <CheckBox
        android:id="@+id/cb_swimming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ch_Name"
        android:layout_toEndOf="@+id/cb_reading"
        android:text="@string/lbl_cb_swimming"/>
    <CheckBox
        android:id="@+id/cb_walking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_reading"
        android:text="@string/lbl_cb_walking"/>
    <CheckBox
        android:id="@+id/cb_travelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_swimming"
        android:layout_toEndOf="@+id/cb_walking"
        android:text="@string/lbl_cb_travelling"/>
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_walking"
        android:padding="20dp"
        android:layout_marginLeft="150dp"
        android:text="OK" />

</RelativeLayout>